--- a/static/css/main.css
+++ b/static/css/main.css
@@ -336,6 +336,10 @@ img.githubRight {position: absolute; top: 0; left: 0; border: 0; }
     -webkit-border-radius: 8px;
 }
 
+div.centered {
+    text-align:center;
+}
+
 /*
  * Sidebar and widgets
  */
@@ -482,6 +486,13 @@ span.footerbox {
 li:last-child .hentry, #content > .hentry {border: 0; margin: 0;}
 #content > .hentry {padding: 1em 0;}
 .hentry img{display : none ;}
+.hentry img.cover-image {
+    display: inline;
+    max-width:80%;
+    max-height:200px;
+    width: auto;
+    height: auto;
+}
 
 /* Featured article or title of article */
 .entry-title {font-size: 2.7em; margin-top: 0; margin-bottom: .7em }
@@ -521,5 +532,12 @@ ol.publication-list > li {
     margin-bottom: 0.8em;
 }
 ol.publication-list > li:last-child {
+    margin-bottom: 0em;
+}
+
+ul.publication-list > li {
+    margin-bottom: 0.8em;
+}
+ul.publication-list > li:last-child {
     margin-bottom: 0em;
 }
