--- a/static/css/main.css
+++ b/static/css/main.css
@@ -312,9 +312,18 @@ img.githubRight {position: absolute; top: 0; left: 0; border: 0; }
     border-top: 1.5px solid #353232;
 }
 
-#banner nav .dropdown li > a {
+#banner nav .dropdown li > a, #banner nav .dropdown li > a:active,
+#banner nav .dropdown li > a:hover, #banner nav .dropdown li > a:link {
     display:block;
     padding: 4px 1.0em;
+
+    border-top-left-radius: 0;
+    -moz-border-radius-topleft: 0;
+    -webkit-border-top-left-radius: 0;
+
+    border-bottom-left-radius: 0;
+    -moz-border-radius-bottomleft: 0;
+    -webkit-border-bottom-left-radius: 0;
 }
 
 
